Fix some configurations

--- a/3. Cloud Data Warehouses/dwh.cfg
+++ b/3. Cloud Data Warehouses/dwh.cfg
@@ -1,14 +1,14 @@
 [CLUSTER]
-HOST='redshift-cluster-1.c2mdw2ya3l5h.us-west-2.redshift.amazonaws.com'
-DB_NAME='sparkify'
-DB_USER='awsuser'
-DB_PASSWORD='pS9huS2e<+esYV$3'
-DB_PORT=5439
+HOST =
+DB_NAME ='sparkify'
+DB_USER =
+DB_PASSWORD =
+DB_PORT = 5439
 
 [IAM_ROLE]
-ARN=arn:aws:iam::885416648185:role/myRedshiftRole
+ARN =
 
 [S3]
-LOG_DATA='s3://udacity-dend/log_data'
-LOG_JSONPATH='s3://udacity-dend/log_json_path.json'
-SONG_DATA='s3://udacity-dend/song_data/'
+LOG_DATA = 's3://udacity-dend/log_data'
+LOG_JSONPATH = 's3://udacity-dend/log_json_path.json'
+SONG_DATA = 's3://udacity-dend/song_data/'
